[gd_scene load_steps=10 format=2]

[ext_resource path="res://entities/door/scripts/door.gd" type="Script" id=1]
[ext_resource path="res://entities/door/animations/SETUP.anim" type="Animation" id=2]
[ext_resource path="res://entities/door/animations/close.anim" type="Animation" id=3]
[ext_resource path="res://entities/door/animations/open.anim" type="Animation" id=4]
[ext_resource path="res://assets/SFX/doorOpen_1.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/GFX/PNG/Tiles/tile_473.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.2684, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.0747, 8.86523 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( -32, -9, -32, 9, 32, 9, 32, 8, 32, -9 )

[node name="Door" type="Area2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )
_player_collision = [ 1, 8 ]
_npc_collision = [ 4 ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SETUP = ExtResource( 2 )
anims/close = ExtResource( 3 )
anims/open = ExtResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -6.0
bus = "Sound Effects"

[node name="CharacterDetector" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DoorSprite" type="Sprite" parent="."]
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="DoorSprite"]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorSprite/StaticBody2D"]
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="DoorSprite"]
occluder = SubResource( 3 )

[node name="StuckNPCTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="StuckNPCTimer" to="." method="_on_StuckNPCTimer_timeout"]
